--- a/index.html
+++ b/index.html
@@ -32,3 +32,20 @@ d.  display the "subtitle" prop in a <h3> tag.
 e. display the "content" prop in a <p> tag.
 f. display the "image" prop as an <img> tag. 
 -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>React Components Assignment</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div id="root"></div>
+  <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+  <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+  <script type="text/babel" src="script.js"></script>
+</body>
+</html>
